style: fixed alignments

--- a/app/globals.css
+++ b/app/globals.css
@@ -1813,7 +1813,7 @@ data-styled.g68[id="Herostyles__StyledHeroContent-sc-ofav2u-2"] {
 /*!sc*/
 @media only screen and (min-width: 1024px) {
   .bAidkr {
-    font-size: 78px;
+    font-size: 64px;
     line-height: 92px;
   }
 }
